--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,13 @@
             ],
             "styles": [
               "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/angular-notifier/styles/themes/theme-material.css",
+              "./node_modules/angular-notifier/styles/types/type-success.css",
+              "./node_modules/angular-notifier/styles/types/type-error.css",
+              "./node_modules/angular-notifier/styles/types/type-info.css",
+              "./node_modules/angular-notifier/styles/types/type-warning.css",
+              "./node_modules/angular-notifier/styles/core.css",
+
               "src/styles.css"
             ],
             "scripts": []
