--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store-devtools": "^6.1.0",
     "@swimlane/ngx-charts": "^9.0.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-notifier": "^4.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
